[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/sword_bar.png" type="Texture" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/GUI/sword_fill_damaged.png" type="Texture" id=5]
[ext_resource path="res://fonts/gomarice_no_continue.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/aco_icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 6 )

[node name="Node2D" type="MarginContainer"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1681.0
margin_bottom = 151.0
grow_horizontal = 0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 440.0
margin_bottom = 151.0

[node name="HP" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 53.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HP"]
margin_right = 440.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HP/HBoxContainer"]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "HP"

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/VBoxContainer/HP/HBoxContainer"]
margin_left = 44.0
margin_right = 440.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
tint_progress = Color( 0.301961, 0.0784314, 0.0784314, 1 )

[node name="HP2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 440.0
margin_bottom = 125.0

[node name="PlayerSword" type="TextureProgress" parent="HBoxContainer/VBoxContainer/HP2"]
margin_right = 440.0
margin_bottom = 68.0
step = 0.01
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )

[node name="separator" type="Label" parent="HBoxContainer"]
margin_left = 444.0
margin_right = 807.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
text = "           "
align = 1
valign = 1

[node name="time" type="Label" parent="HBoxContainer"]
margin_left = 811.0
margin_right = 1157.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
text = "00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="separator2" type="Label" parent="HBoxContainer"]
margin_left = 1161.0
margin_right = 1524.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
text = "           "
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 1528.0
margin_right = 1681.0
margin_bottom = 151.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 153.0
margin_bottom = 151.0

[node name="metal" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 45.0
margin_right = 53.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
text = "10"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 153.0
margin_bottom = 151.0
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true
[connection signal="ready" from="Timer" to="." method="_on_Timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
